@startuml
' hide the spot
' hide circle
' avoid problems with angled crows feet

skinparam linetype ortho

entity "Aluno" as ALUNO {
*cpf : text
--
nome : text
creditos : number
senha: text
login: text
rg: text
instituicao_id: number <<FK>>
curso_id: number <<FK>>
}

entity "Instituicao" as INSTITUICAO{
*id : number <<generated>>
--
nome: text
}

entity "Departamento" as DEPARTAMENTO{
*id : number <<generated>>
--
nome: text
instituicao_id: number <<FK>>
}

entity "Curso" as CURSO{
*id : number <<generated>>

}

entity "Cupom" as CUPOM{
*id : number <<generated>>
--
codigo: text
aluno_id: number <<FK>>
empresa_id: number <<FK>>
}

entity "Empresa" as EMPRESA{
*id : number <<generated>>
--
nome: text
cnpj: text
instituicao_id: number <<FK>>
}

entity "Professor" as PROFESSOR {
*cpf : text
--
nome : text
creditos : number
senha: text
login: text
departamento_id: number <<FK>>
}

entity "Vantagens" as VANTAGENS {
*id : text <<generated>>
--
descricao : text
foto : number
empresa_id: number <<FK>>
}


ALUNO |o..|{ INSTITUICAO
ALUNO |o..|{ CURSO
ALUNO ||..o{ CUPOM
EMPRESA ||..o{ CUPOM
EMPRESA ||..o{ INSTITUICAO
PROFESSOR |o..|{ DEPARTAMENTO
EMPRESA ||..o{ VANTAGENS
DEPARTAMENTO |o..|{ INSTITUICAO
